# task2.6_sort_diagonal

./: CMakeLists.txt  README.md
mymatrix/: CMakeLists.txt  mymatrix_library.cpp  mymatrix_library.h
mymatrix/tests/: CMakeLists.txt  tests.cpp
